hw1/calculator.css
#calculator {
    width: 280px;
    display: block;
    text-decoration: none;
    text-align: center;
    border-radius: 10px;
    color: black;
}

div {
    background-color: lightgray;
    padding: 5px;
}

.display {
    height: 50px;
    margin:auto;
    background-color:white;
    margin-bottom: 5px;
    margin-top: 5px;
    text-align: right;
    border-width: 6px;
    font-size: 40px;
    font-family:sans-serif;   
    border-style: solid;
    border-color: darkgray; 
}

button {
    font-size: x-large;
    border-radius: 5px;
    height: 60px;
    width: 60px;
    cursor: pointer;
}

button:hover {
    background-color: pink;
}

#zero {
    width: 120px;
    background-color: lightblue;
}

#zero:hover {
    background-color: pink;
}

.digit {
    background-color: lightblue;
}

.operator {
    background-color: orange;
}

